--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
+    "epoch-timeAgo": "latest",
+    "epoch-timeago": "^1.0.5",
+    "epoch-to-timeago": "^1.0.1",
     "express": "~4.15.2",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2",
