--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "finish": "^0.6.3",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2",
-    "snoowrap": "^1.14.2"
+    "snoowrap": "^1.14.2",
+    "socket.io": "^2.0.4"
   }
 }
